<resources>
    <string name="app_name">Shikimori App</string>
    <string name="appBarFixScrollingFooterBehavior">com.gnoemes.shikimori.utils.widgets.FixScrollingFooterBehavior</string>
    <string name="default_notification_channel_id">SHIKIMORI_NOTIFICATION_CHANNEL_ID</string>
    <string name="main_exit_message">Для выхода из программы нажмите кнопку еще раз</string>
    <string name="common_rates">Списки</string>
    <string name="common_calendar">Календарь</string>
    <string name="common_search">Поиск</string>
    <string name="common_main">Главная</string>
    <string name="common_more">Профиль</string>
    <string name="common_profile">Профиль</string>
    <string name="common_today">Сегодня</string>
    <string name="common_tomorrow">Завтра</string>
    <string name="common_genre">Жанр</string>
    <string name="common_type">Тип</string>
    <string name="common_status">Статус</string>
    <string name="common_season">Сезон</string>
    <string name="common_year">Год</string>
    <string name="common_duration">Продолжительность эпизода</string>
    <string name="common_yesterday">Вчера</string>
    <string name="common_error_message">Похоже, что у Вас отсуствует интернет-соединение или произошла ошибка.\n Потяните, что бы обновить</string>
    <string name="common_error_message_without_pull">Похоже, что у Вас отсуствует интернет-соединение или произошла ошибка.</string>
    <string name="common_description">Описание</string>
    <string name="common_cancel">Отмена</string>
    <string name="common_cancel_variant">Отменить</string>
    <string name="common_next">Далее</string>
    <string name="common_sign_in">Войти</string>
    <string name="common_sign_up">Регистрация</string>
    <string name="common_sign_as_guest">Войти как гость</string>
    <string name="common_characters">Персонажи</string>
    <string name="common_character">Персонаж</string>
    <string name="common_chronology">Хронология</string>
    <string name="common_chronology_read">Порядок чтения</string>
    <string name="common_similar">Похожие</string>
    <string name="common_related">Связанное</string>
    <string name="common_links">Ссылки</string>
    <string name="common_discussion">Обсуждение</string>
    <string name="common_seyu">Сэйю</string>
    <string name="common_anime">Аниме</string>
    <string name="common_manga">Манга</string>
    <string name="common_ranobe">Ранобэ</string>
    <string name="common_manga_and_ranobe">Манга и ранобэ</string>
    <string name="common_video">Видео</string>
    <string name="common_empty">Ничего не найдено</string>
    <string name="common_need_auth">Для данного действия необходима авторизация</string>
    <string name="common_episodes">Эпизоды</string>
    <string name="common_save">Сохранить</string>
    <string name="common_delete">Удалить</string>
    <string name="common_volumes">Тома</string>
    <string name="common_chapters">Главы</string>
    <string name="common_open_in_browser">Открыть веб-версию</string>
    <string name="common_source">Источник</string>
    <string name="common_person">Человек</string>
    <string name="common_roles">Роли</string>
    <string name="common_all">Все</string>
    <string name="common_repeat">Повторить</string>
    <string name="common_reset">Сброс</string>
    <string name="common_accept">Принять</string>
    <string name="common_age_rating">Возрастной рейтинг</string>
    <string name="common_guest">Гость</string>
    <string name="common_clubs">Клубы</string>
    <string name="common_comments">Комментарии</string>
    <string name="common_download">Скачать</string>
    <string name="common_remember_choice">Запомнить выбор</string>
    <string name="common_change_in_settings">Можно изменить в настройках</string>
    <string name="common_topic_not_found">Не удалось найти тему</string>
    <string name="common_favorite">Избранное</string>
    <string name="common_friends">Друзья</string>
    <string name="common_history">История</string>
    <string name="common_online">Онлайн</string>
    <string name="common_user_history">История пользователя</string>
    <string name="common_understand">Понятно</string>
    <string name="common_apply">Применить</string>
    <string name="common_ok">ок</string>
    <string name="common_share">Поделиться</string>
    <string name="common_statistic">Статистика</string>
    <string name="common_web_version">Веб-версия</string>
    <string name="common_count_format">%d из %d</string>
    <string name="season_autumn">Осень</string>
    <string name="season_winter">Зима</string>
    <string name="season_spring">Весна</string>
    <string name="season_summer">Лето</string>
    <string name="status_anons">Анонс</string>
    <string name="status_ongoing">Онгоинг</string>
    <string name="status_released">Завершен</string>
    <string name="rate_add">Добавить</string>
    <string name="rate_empty">Здесь пока ничего нет</string>
    <string name="rate_watching">Смотрю</string>
    <string name="rate_reading">Читаю</string>
    <string name="rate_rereading">Перечитываю</string>
    <string name="rate_readed">Прочитано</string>
    <string name="rate_planned">Запланировано</string>
    <string name="rate_planned_short">В планах</string>
    <string name="rate_rewatch">Пересматриваю</string>
    <string name="rate_rewatch_short">Пересмотр</string>
    <string name="rate_completed">Просмотрено</string>
    <string name="rate_on_hold">Отложено</string>
    <string name="rate_dropped">Брошено</string>
    <string name="rate_rating">Оценка</string>
    <string name="rate_comment_hint">Добавить комментарий к списку</string>
    <string name="rate_watching_with_count">Смотрю (%s)</string>
    <string name="rate_reading_with_count">Читаю (%s)</string>
    <string name="rate_rereading_with_count">Перечитываю (%s)</string>
    <string name="rate_readed_with_count">Прочитано (%s)</string>
    <string name="rate_planned_with_count">Запланировано (%s)</string>
    <string name="rate_rewatch_with_count">Пересматриваю (%s)</string>
    <string name="rate_completed_with_count">Просмотрено (%s)</string>
    <string name="rate_on_hold_with_count">Отложено (%s)</string>
    <string name="rate_dropped_with_count">Брошено (%s)</string>
    <string name="rate_remove">Удалить из списка</string>
    <string name="rate_comment">Комментарий</string>
    <string name="rate_status">Список</string>
    <string name="rates_need_auth">Для измения статуса необходимо авторизоваться в приложении</string>
    <string name="rates_title_anime">Редактирование аниме</string>
    <string name="rates_title_manga">Редактирование манги</string>
    <string name="rates_title_anime_add">Добавление аниме</string>
    <string name="rates_title_manga_add">Добавление манги</string>
    <string name="rate_switch_list">Переключить список</string>
    <string name="rate_search_empty_title">В этом списке ничего не найдено</string>
    <string name="rate_search_empty_message">Измените запрос или воспользуйтесь разделом поиска.</string>
    <string name="rate_pin_max_message">Закрепить можно до трех элементов</string>
    <string name="rate_swipe_increment">+1</string>
    <string name="rate_swipe_change">Изменить список</string>
    <string name="rate_swipe_hold">Отложить</string>
    <string name="rate_swipe_drop">Бросить</string>
    <string name="rate_swipe_disabled">Отключено</string>
    <string name="rate_empty_list">Список пуст</string>
    <string name="rate_empty_anime">Поиск аниме</string>
    <string name="rate_empty_manga">Поиск манги</string>
    <string name="rate_message_anime_in_progress">В ожидании просмотра.</string>
    <string name="rate_message_anime_planned">Запланировано.</string>
    <string name="rate_message_anime_rewatched">В ожидании перепросмотра.</string>
    <string name="rate_message_anime_completed">Просмотрено.</string>
    <string name="rate_message_anime_on_hold">Отложено.</string>
    <string name="rate_message_anime_drop">Брошено.</string>
    <string name="rate_message_anime_deleted">Удалено.</string>
    <string name="rate_message_manga_in_progress">В ожидании прочтения.</string>
    <string name="rate_message_manga_planned">Запланирована.</string>
    <string name="rate_message_manga_rewatched">В ожидании перечитывания.</string>
    <string name="rate_message_manga_completed">Прочитана.</string>
    <string name="rate_message_manga_on_hold">Отложена.</string>
    <string name="rate_message_manga_drop">Брошена.</string>
    <string name="rate_message_manga_deleted">Удалена</string>
    <string name="rate_message_ranobe_in_progress">В ожидании прочтения.</string>
    <string name="rate_message_ranobe_planned">Запланировано.</string>
    <string name="rate_message_ranobe_rewatched">В ожидании перечитывания.</string>
    <string name="rate_message_ranobe_completed">Прочитано.</string>
    <string name="rate_message_ranobe_on_hold">Отложено.</string>
    <string name="rate_message_ranobe_drop">Брошено.</string>
    <string name="rate_message_ranobe_deleted">Удалено.</string>
    <string name="rating_empty">Нет оценки</string>
    <string name="rating_bad_ass">Хуже некуда</string>
    <string name="rating_awful">Ужасно</string>
    <string name="rating_very_bad">Очень плохо</string>
    <string name="rating_bad">Плохо</string>
    <string name="rating_not_bad">Не плохо</string>
    <string name="rating_normal">Нормально</string>
    <string name="rating_good">Хорошо</string>
    <string name="rating_fine">Отлично</string>
    <string name="rating_nuts">Великолепно</string>
    <string name="rating_perfect">Шедевр!</string>
    <string name="search_nothing">Ничего не найдено.\n Попробуйте поискать что-нибудь другое</string>
    <string name="translations_nothing">Ничего не найдено.\n Попробуйте изменить тип перевода</string>
    <string name="common_this_week">На этой неделе</string>
    <string name="day_ago">день назад</string>
    <string name="week_ago">неделю назад</string>
    <string name="month_ago">месяц назад</string>
    <string name="year_ago">год назад</string>
    <string name="history_half_year_ago">Более полугода назад</string>
    <string name="history_hour_ago">час назад</string>
    <string name="history_its_now">только что</string>
    <string name="history_minute_ago">минуту назад</string>
    <string name="calendar_date_format" translatable="false">%s, %s</string>
    <string name="calendar_must_aired">Сейчас на ТВ</string>
    <string name="calendar_my_ongoings">Мои онгоинги</string>
    <string name="calendar_nothing">Ничего не найдено.\n Добавляйте аниме в списки для отслеживания выхода новых серий</string>
    <string name="calendar_search_hint">Онгоинги и анонсы</string>
    <string name="calendar_aired_already">Вышедшее сегодня</string>
    <string name="calendar_season_end">Конец сезона</string>
    <string name="calendar_empty_title">В ближайший месяц ничего нет</string>
    <string name="calendar_empty_description">Измените запрос или попробуйте найти более позднюю дату выхода на странице тайтла.</string>
    <string name="similar_empty_description">Ничего не найдено</string>
    <string name="episodes_format">\n[%s из %s]</string>
    <string name="volumes_format">\n[%s-%s]</string>
    <string name="episode_number">%d эпизод</string>
    <string name="episode_short">эп.</string>
    <string name="episode_in">через %s</string>
    <string name="minute_short">мин</string>
    <string name="details_watch_online">Смотреть онлайн</string>
    <string name="series_alternative_source">Альтернативный источник</string>
    <string name="series_empty_authors_title">Авторы не найдены</string>
    <string name="series_empty_authors_description">Попробуйте изменить источник или тип, если смотрите не в одном.</string>
    <string name="profile_auth_title">Вы не вошли в аккаунт</string>
    <string name="profile_auth_description">Войдите, чтобы все функции стали доступны.</string>
    <string name="profile_auth_register">Создать аккаунт</string>
</resources>