<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/series_empty_authors_title"
        android:textColor="?attr/colorOnSurface"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/descriptionView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/descriptionView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:gravity="center"
        app:layout_goneMarginBottom="60dp"
        android:text="@string/series_empty_authors_description"
        android:textColor="?attr/colorOnPrimarySecondary"
        app:layout_constraintBottom_toTopOf="@+id/actionBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionBtn"
        style="@style/OutlinedButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:text="@string/series_alternative_source"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionView" />

</androidx.constraintlayout.widget.ConstraintLayout>