<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <View
        android:id="@+id/todo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/logoView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInButtonView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/common_sign_in"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpButtonView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/common_sign_up"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButtonView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/guestButtonView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/common_sign_as_guest"
        app:cornerRadius="4dp"
        android:textColor="@color/default_colorOnSurface"
        app:backgroundTint="@color/colorOnProtector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButtonView" />


</androidx.constraintlayout.widget.ConstraintLayout>